Fixed page jumping on menu position change.
Added a <div> at bottom of menu to fill space when it becomes fixed.

--- a/css/global.css
+++ b/css/global.css
@@ -54,7 +54,9 @@ header {
     color: #000000;
     cursor: default;
 }
-
+#fill {
+    height: 0px;
+}
 /* MENU END */
 
 
@@ -121,7 +123,6 @@ code {
 }
 .redbox:hover {
     text-decoration: underline;
-    cursor: pointer;
 }
 .redbox a {
     color: #FFF;
